[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-explore"
version = "0.1.0"
description = "Ephemeral workspace manager for exploring GitHub repositories with Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
]
authors = [
    {name = "akatzfey"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
claude-explore = "claude_explore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_explore"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
